# Skippy

./: README.md  pyproject.toml  skippy.py
docs/: skippy_csv_syntax.csv  skippy_txt_syntax.txt
