[project]
name = "skippy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.1",
    "pyvisa>=1.15.0",
    "pyvisa-sim>=0.7.1",
]

[dependency-groups]
dev = [
    "cx-freeze>=8.4.1",
    "pyinstaller>=6.16.0",
]
